--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "assert": "^2.0.0",
     "bcrypt": "^5.0.0",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
