--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react-google-autocomplete": "^1.2.6",
     "react-google-maps": "^9.4.5",
     "react-icons": "^3.11.0",
+    "react-native-google-autocomplete": "^0.1.9",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
