--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "firebase-admin": "^9.1.1",
+    "moment": "^2.27.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
     "passport": "^0.4.1",
