--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,6 @@
     "dev": "nodemon server.js"
   },
   "license": "MIT",
-  "devDependencies": {
-    "dotenv": "^8.2.0",
-    "nodemon": "^2.0.4"
-  },
   "dependencies": {
     "assert": "^2.0.0",
     "bcrypt": "^5.0.0",
@@ -18,6 +14,8 @@
     "moment": "^2.27.0",
     "mongodb": "^3.6.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.4"
   }
 }
